<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:aandroid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="DuplicateIds">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/save" />
   
    <LinearLayout
        android:id="@+id/saveButtonlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/personSeenSubstituteNoSeenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_seen_substitute"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/nonamegivenlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/nonamegiven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/no_name_given"
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/personSeenSubstituteSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/mySpinnerItemStyle"
        android:entries="@array/personSeenSubstitute"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/personSeenSubstituteNoSeenlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/personSeenSubstituteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_seen_substitute"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/namegivenlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/namegiven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/name_given"
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/personSeenSubstituteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      	android:inputType="text"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/personSeenSubstitutelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/personSeenPersonalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_seen_personal"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/personSeenPersonalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"/>
 
    <Spinner
        android:id="@+id/personSeenPersonalSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:prompt="@string/personSeenPersonal_spinner_title" />
 
    <LinearLayout
        android:id="@+id/personSeenPersonallinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/personNotSeenPersonalPlusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_not_seen_personalplus"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/personNotSeenPersonalPlusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:textSize="25sp"
        android:textColor="@android:color/holo_blue_dark">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/personNotSeenPersonalPluslinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/corprecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corp_recipient"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/corprecEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/corpreclinearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/corprectitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corp_recipient_title"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/corprectitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/corprectitlelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#294973"
        android:orientation="horizontal" />
    <LinearLayout
        android:id="@+id/firstAtmptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/serviceFirstAttempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_attempt"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/latlonText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

          <LinearLayout 
              android:id="@+id/lay1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              
               <TextView
                android:id="@+id/textViewD7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lat"
                   android:textColor="@android:color/white"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lat1TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="26sp" />
                  
          </LinearLayout>
             <LinearLayout 
              android:id="@+id/lay2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
                 
            <TextView
                android:id="@+id/textViewD8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lon"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lon1TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="26sp" />
                
              </LinearLayout>     
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:background="#294973"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondAtmptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/serviceSecondAttempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_attempt"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" /> <!-- android:id="@+id/serviceSecondAttempt" -->

        <LinearLayout
            android:id="@+id/latlonText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout 
              android:id="@+id/lay2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
                 
            <TextView
                android:id="@+id/textViewD7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lat"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" tools:ignore="DuplicateIds"/>

            <TextView
                android:id="@+id/lat2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="26sp" />
                   
            </LinearLayout>  
            <LinearLayout 
              android:id="@+id/lay2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              
                <TextView
                android:id="@+id/textViewD8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lon"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lon2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="26sp" />
                
                
                </LinearLayout>
   
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:background="#294973"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdAtmptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/serviceThirdAttempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_attempt"
            android:textColor="@android:color/holo_blue_dark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/latlonText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewD7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lat"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lat3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="26sp" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/latlonText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewD8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lon"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lon3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="26sp" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <CheckBox
        android:id="@+id/serviceCompletedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:text="@string/completed"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="#294973"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/showOnMapButton"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_height="75dp"
        android:text="@string/show_on_map" />

    <WebView
        android:id="@+id/gpsloc"
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

</LinearLayout>